# kyward

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Rocket.toml  http_bench.txt  readme.md
.github/workflows/: docker-image.yml
kyward-api/: .env  Cargo.toml  Rocket.toml  readme.md
kyward-api/migrations/2021-07-30-100212_door/: up.sql
kyward-api/src/: auth.rs  cors.rs  main.rs  schema.rs
kyward-api/src/auth/: error.rs  mod.rs  token.rs  user.rs
kyward-api/src/database/: mod.rs
kyward-api/src/handler/: company.rs  door.rs  group.rs  mod.rs  person.rs  token.rs  ui.rs  version.rs
kyward-api/src/models/: company.rs  person.rs  token.rs
kyward-api/src/v1alpha1/handler/: company.rs  door.rs  group.rs  mod.rs  person.rs  token.rs  ui.rs  version.rs
kyward-api/src/v1alpha1/models/: company.rs  door.rs  group.rs  person.rs  token.rs
kyward-ui/: Cargo.toml  index.html
kyward-ui/src/: app.rs  main.rs  router.rs  utils.rs
kyward-ui/src/models/: company.rs  door.rs  group.rs  mod.rs  person.rs  token.rs  user.rs
kyward-ui/src/pages/: companies.rs  company.rs  door.rs  doors.rs  home.rs  login.rs  logout.rs  mod.rs
migrations/2021-07-30-100212_door/: down.sql  up.sql
src/: cors.rs  main.rs  schema.rs
src/database/: mod.rs
src/handler/: company.rs  door.rs  group.rs  mod.rs  person.rs  token.rs  ui.rs
src/models/: company.rs  door.rs  group.rs  mod.rs  person.rs  token.rs
