[package]
name = "kyward"
version = "0.1.0"
edition = "2018"

[package.metadata.raze]
workspace_path = "//kyward-api"
package_aliases_dir = "."
targets = [
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.4", features = ["sqlite", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rocket_contrib = { version = "0.4.10", features = ["json", "diesel_sqlite_pool"] }
rust-embed="6.0.0"
rocket_prometheus = "0.8.1"
clap = "2.33.3"
reqwest = "0.11.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]

[print_schema]
file = "src/db/schema.rs"