[package]
name = "kyward-ui"
version = "0.1.0"
edition = "2018"

[package.metadata.raze]
workspace_path = "//kyward-ui"
package_aliases_dir = "."
targets = [
    "wasm32-unknown-unknown",
]
genmode = "Remote"

[dependencies]
yew = "0.18"
yew-router = "0.15.0"
ybc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.42"
oauth2 = "4.1"
regex = "1.5.4"
wasm-cookies = "0.1.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
async-std = "1.9.0"
base64 = "0.13.0"